--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "express-validator": "^5.0.0",
+    "helmet": "^3.11.0",
     "mongodb": "^3.0.2",
     "mongoose": "^5.0.5"
   },
   "devDependencies": {
-    "nodemon": "^1.14.12"
+    "ddos": "^0.1.25",
+    "nodemon": "^1.15.0"
   }
 }
